Refactor to reduce complexity
Removed unnecessary null and empty checks. Refactor matchesNode to remove use of bitwise `&=`, replace null & blank check with `StringUtils.isNotBlank()`, and return direct eval. isEmpty() now uses `StringUtils.isBlank()`. splitConceptPath converted to one liner using steams. Added logging.